Added worldserver.conf settings
Added sql to custom folder scripts
Added Multivendor, beastmaster and enchanter

--- a/src/server/scripts/Custom/CMakeLists.txt
+++ b/src/server/scripts/Custom/CMakeLists.txt
@@ -27,8 +27,9 @@ Custom/TransmogDisplayVendor/TransmogDisplayVendorConf.h
 Custom/TransmogDisplayVendor/TransmogDisplayVendor.cpp
 Custom/arenaladder.cpp
 Custom/worldchat.cpp
-Custom/phasing.cpp
-Custom/guildinviteonlogin.cpp
+Custom/titles.cpp
+Custom/beastmaster.cpp
+Custom/enchanter.cpp
 )
 
 message("  -> Prepared: Custom")
