Added settings for worldserver.conf.dist

--- a/src/server/worldserver/worldserver.conf.dist
+++ b/src/server/worldserver/worldserver.conf.dist
@@ -33,6 +33,9 @@
 #    AUCTION HOUSE BOT BUYER CONFIG
 #    LOGGING SYSTEM SETTINGS
 #    PACKET SPOOF PROTECTION SETTINGS
+#    TRANSMOGRIFICATION
+#	 CUSTOM RATE XP
+#	 WORLDHCAT
 #
 ###################################################################################################
 
