--- a/src/server/worldserver/worldserver.conf.dist
+++ b/src/server/worldserver/worldserver.conf.dist
@@ -36,6 +36,8 @@
 #    TRANSMOGRIFICATION
 #	 CUSTOM RATE XP
 #	 WORLDHCAT
+#	 3v3
+#	 1v1
 #
 ###################################################################################################
 
@@ -3614,7 +3616,7 @@ Transmogrification.IgnoreReqSpell = 0
 Transmogrification.IgnoreReqLevel = 0
 Transmogrification.IgnoreReqEvent = 0
 Transmogrification.IgnoreReqStats = 0
-
+#
 #
 #    SET FEATURE
 #
@@ -3641,16 +3643,16 @@ Transmogrification.IgnoreReqStats = 0
 #    Transmogrification.SetCopperCost
 #        Description: Cost added on top of other costs (can be negative)
 #        Default:    0
-
+#
 Transmogrification.EnableSets = 1
 Transmogrification.MaxSets = 10
-
+#
 Transmogrification.EnableSetInfo = 1
 Transmogrification.SetNpcText = 50001
-
+#
 Transmogrification.SetCostModifier = 3.0
 Transmogrification.SetCopperCost = 0
-
+#
 #
 ###################################################################################################
 #
@@ -3671,20 +3673,20 @@ Transmogrification.SetCopperCost = 0
 #        Remarks    : Higher security accounts may set xp/loot rate to
 #                     lower security level accounts.
 #
-
+#
 Player.XpRateSecurity = 0
 Player.LootRateSecurity = 0
-
+#
 #    Player.MaximumXpRate
 #    Player.MaximumLootRate
 #        Description: Maximum individual XP / loot rate
 #        Values     : n (integer, may set xp / loot rate in range [1,n]
 #        Default    : 10
 #
-
+#
 Player.MaximumXpRate = 20
 Player.MaximumLootRate = 10
-
+#
 #    Player.ShowXpRateOnLogin
 #    Player.ShowLootRateOnLogin
 #        Description: Shows current XP / loot rate to player on login
@@ -3699,10 +3701,10 @@ Player.MaximumLootRate = 10
 #        Values     : 1 - Enable
 #		 Values 	: 0 - Disable
 #        Default    : 1
-
+#
 CustomXpRate.enabled = 1
 CustomLootRate.enabled = 1
-
+#
 #    Player.ShowXpRateOnLogin
 #    Player.ShowLootRateOnLogin
 #        Description: Shows current XP / loot rate to player on login
@@ -3710,11 +3712,11 @@ CustomLootRate.enabled = 1
 #                   : 1 - show
 #        Default    : 1
 #
-
+#
 Player.ShowXpRateOnLogin = 1
 Player.ShowLootRateOnLogin = 1
-
 #
+####################################################################################################
 ###################################################################################################
 #  WorldChat Settings
 #        WorldChat.enabled
@@ -3722,11 +3724,48 @@ Player.ShowLootRateOnLogin = 1
 #		 Usage: 0 = Disabled, 1 = Enabled
 WorldChat.enabled = 1
 #
-#		 WorldChat.Player.color
-#		 WorldChat.Staff.color
-#		 Description: Defines the player name color
-#		 Usage: Color code must be in Blizzards color system ex. RED = |cffFF0000
 #
 ###################################################################################################
 ###################################################################################################
- 
+#
+###################################################################################################
+#  3v3 Soloqueue 
+#        Solo.3v3.Enable
+#	     Description: Defines is the world chat enabled or disabled, default : Enabled
+#		 Usage: 0 = Disabled, 1 = Enabled
+#
+Solo.3v3.Enable = 1
+#
+#
+#
+#  3v3 Soloqueue Cost
+#        Solo.3v3.Costs
+#	     Description: Gives value cost; 400000 is 40g
+#		 Usage: 0 = Disabled, 1 = Enabled
+#
+Solo.3v3.Costs = 400000
+#
+#
+###################################################################################################
+###################################################################################################
+#
+###################################################################################################
+#  1v1
+#        Arena.1v1.Enable
+#	     Description: Defines is the world chat enabled or disabled, default : Enabled
+#		 Usage: 0 = Disabled, 1 = Enabled
+#
+Arena.1v1.Enable = 1
+#
+#
+#
+#  1v1
+#        Arena.1v1.Enable
+#	     Description: Gives value cost; 400000 is 40g
+#		 Usage: 0 = Disabled, 1 = Enabled
+#
+Arena.1v1.Costs = 400000
+#
+#
+###################################################################################################
+###################################################################################################
