[Core/WorldServer] Added Crossfaction Enable/Disable

--- a/src/server/worldserver/worldserver.conf.dist
+++ b/src/server/worldserver/worldserver.conf.dist
@@ -3786,4 +3786,15 @@ Arena.1v1.Costs = 400000
 #
 #
 ###################################################################################################
++###################################################################################################
+#
+# CROSSFACTION BG CONFIG
+#
+#    CrossfactionBG.enable = 1 - Mixed battleground enabled.
+#    CrossfactionBG.enable = 0 - Mixed battleground disabled.
+
+CrossFactionSystem.Battlegrounds = 1
+
+#
 ###################################################################################################
+
